# RectangleCPPJunior2022

./: .gitignore  CMakeLists.txt  Rectangle.cpp  Rectangle.h  main.cpp
include/: Rectangle.h
src/: Rectangle.cpp
test/: CMakeLists.txt  rectangle_test.cpp
